[gd_scene load_steps=2 format=3 uid="uid://b8pfi788v3d1y"]

[ext_resource type="Script" path="res://scenes/ui/ShopOverlay.gd" id="1"]

[node name="ShopOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Shop"
horizontal_alignment = 1

[node name="CoinsLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Coins: 25"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemsContainer" type="VBoxContainer" parent="Panel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HPPotionButton" type="Button" parent="Panel/VBoxContainer/ScrollContainer/ItemsContainer"]
layout_mode = 2
text = "HP Potion (1 coin) - Have: 2"

[node name="ResolvePotionButton" type="Button" parent="Panel/VBoxContainer/ScrollContainer/ItemsContainer"]
layout_mode = 2
text = "Resolve Potion (1 coin) - Have: 2"

[node name="PowerBoostButton" type="Button" parent="Panel/VBoxContainer/ScrollContainer/ItemsContainer"]
layout_mode = 2
text = "Power Boost (1 coin) - 2x damage next battle"

[node name="QuickReflexesButton" type="Button" parent="Panel/VBoxContainer/ScrollContainer/ItemsContainer"]
layout_mode = 2
text = "Quick Reflexes (1 coin) - Slower QTE windows"

[node name="IronWillButton" type="Button" parent="Panel/VBoxContainer/ScrollContainer/ItemsContainer"]
layout_mode = 2
text = "Iron Will (1 coin) - +2 resolve next battle"

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Leave Shop"